# Trip-Planner-Agent-CrewAI-with-StreamLit

./: .gitignore  README.md  pyproject.toml
src/job_posting/: .env.example  crew.py  streamlit_app.py  utils.py
src/job_posting/config/: agents.yaml  tasks.yaml
