[project]
name = "job_posting"
version = "0.1.0"
description = "job_posting using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai[agentops,tools]>=0.186.1,<1.0.0",
    "streamlit>=1.49.1",
    "traceloop-sdk>=0.47.2",
]

[project.scripts]
job_posting = "job_posting.main:run"
run_crew = "job_posting.main:run"
train = "job_posting.main:train"
replay = "job_posting.main:replay"
test = "job_posting.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
